// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`miniprogram-preset > extend 1`] = `
{
  "height": {
    "1-dv-12": "8.333333%",
    "1-dv-2": "50%",
    "1-dv-3": "33.333333%",
    "1-dv-4": "25%",
    "1-dv-5": "20%",
    "1-dv-6": "16.666667%",
    "10-dv-12": "83.333333%",
    "11-dv-12": "91.666667%",
    "2-dv-12": "16.666667%",
    "2-dv-3": "66.666667%",
    "2-dv-4": "50%",
    "2-dv-5": "40%",
    "2-dv-6": "33.333333%",
    "3-dv-12": "25%",
    "3-dv-4": "75%",
    "3-dv-5": "60%",
    "3-dv-6": "50%",
    "4-dv-12": "33.333333%",
    "4-dv-5": "80%",
    "4-dv-6": "66.666667%",
    "5-dv-12": "41.666667%",
    "5-dv-6": "83.333333%",
    "6-dv-12": "50%",
    "7-dv-12": "58.333333%",
    "8-dv-12": "66.666667%",
    "9-dv-12": "75%",
  },
  "size": {
    "1-dv-12": "8.333333%",
    "1-dv-2": "50%",
    "1-dv-3": "33.333333%",
    "1-dv-4": "25%",
    "1-dv-5": "20%",
    "1-dv-6": "16.666667%",
    "10-dv-12": "83.333333%",
    "11-dv-12": "91.666667%",
    "2-dv-12": "16.666667%",
    "2-dv-3": "66.666667%",
    "2-dv-4": "50%",
    "2-dv-5": "40%",
    "2-dv-6": "33.333333%",
    "3-dv-12": "25%",
    "3-dv-4": "75%",
    "3-dv-5": "60%",
    "3-dv-6": "50%",
    "4-dv-12": "33.333333%",
    "4-dv-5": "80%",
    "4-dv-6": "66.666667%",
    "5-dv-12": "41.666667%",
    "5-dv-6": "83.333333%",
    "6-dv-12": "50%",
    "7-dv-12": "58.333333%",
    "8-dv-12": "66.666667%",
    "9-dv-12": "75%",
  },
  "width": {
    "1-dv-12": "8.333333%",
    "1-dv-2": "50%",
    "1-dv-3": "33.333333%",
    "1-dv-4": "25%",
    "1-dv-5": "20%",
    "1-dv-6": "16.666667%",
    "10-dv-12": "83.333333%",
    "11-dv-12": "91.666667%",
    "2-dv-12": "16.666667%",
    "2-dv-3": "66.666667%",
    "2-dv-4": "50%",
    "2-dv-5": "40%",
    "2-dv-6": "33.333333%",
    "3-dv-12": "25%",
    "3-dv-4": "75%",
    "3-dv-5": "60%",
    "3-dv-6": "50%",
    "4-dv-12": "33.333333%",
    "4-dv-5": "80%",
    "4-dv-6": "66.666667%",
    "5-dv-12": "41.666667%",
    "5-dv-6": "83.333333%",
    "6-dv-12": "50%",
    "7-dv-12": "58.333333%",
    "8-dv-12": "66.666667%",
    "9-dv-12": "75%",
  },
}
`;

exports[`miniprogram-preset > fontSize 1`] = `
{
  "2xl": [
    "48rpx",
    {
      "lineHeight": "64rpx",
    },
  ],
  "3xl": [
    "60rpx",
    {
      "lineHeight": "72rpx",
    },
  ],
  "4xl": [
    "72rpx",
    {
      "lineHeight": "80rpx",
    },
  ],
  "5xl": [
    "96rpx",
    {
      "lineHeight": "1",
    },
  ],
  "6xl": [
    "120rpx",
    {
      "lineHeight": "1",
    },
  ],
  "7xl": [
    "144rpx",
    {
      "lineHeight": "1",
    },
  ],
  "8xl": [
    "192rpx",
    {
      "lineHeight": "1",
    },
  ],
  "9xl": [
    "256rpx",
    {
      "lineHeight": "1",
    },
  ],
  "base": [
    "32rpx",
    {
      "lineHeight": "48rpx",
    },
  ],
  "lg": [
    "36rpx",
    {
      "lineHeight": "56rpx",
    },
  ],
  "sm": [
    "28rpx",
    {
      "lineHeight": "40rpx",
    },
  ],
  "xl": [
    "40rpx",
    {
      "lineHeight": "56rpx",
    },
  ],
  "xs": [
    "24rpx",
    {
      "lineHeight": "32rpx",
    },
  ],
}
`;

exports[`miniprogram-preset > lineHeight 1`] = `
{
  "10": "80rpx",
  "3": "24rpx",
  "4": "32rpx",
  "5": "40rpx",
  "6": "48rpx",
  "7": "56rpx",
  "8": "64rpx",
  "9": "72rpx",
  "loose": "2",
  "none": "1",
  "normal": "1.5",
  "relaxed": "1.625",
  "snug": "1.375",
  "tight": "1.25",
}
`;

exports[`miniprogram-preset > mpPreset 1`] = `
{
  "content": [],
  "corePlugins": {
    "preflight": false,
  },
  "theme": {
    "extend": {
      "height": {
        "1-dv-12": "8.333333%",
        "1-dv-2": "50%",
        "1-dv-3": "33.333333%",
        "1-dv-4": "25%",
        "1-dv-5": "20%",
        "1-dv-6": "16.666667%",
        "10-dv-12": "83.333333%",
        "11-dv-12": "91.666667%",
        "2-dv-12": "16.666667%",
        "2-dv-3": "66.666667%",
        "2-dv-4": "50%",
        "2-dv-5": "40%",
        "2-dv-6": "33.333333%",
        "3-dv-12": "25%",
        "3-dv-4": "75%",
        "3-dv-5": "60%",
        "3-dv-6": "50%",
        "4-dv-12": "33.333333%",
        "4-dv-5": "80%",
        "4-dv-6": "66.666667%",
        "5-dv-12": "41.666667%",
        "5-dv-6": "83.333333%",
        "6-dv-12": "50%",
        "7-dv-12": "58.333333%",
        "8-dv-12": "66.666667%",
        "9-dv-12": "75%",
      },
      "size": {
        "1-dv-12": "8.333333%",
        "1-dv-2": "50%",
        "1-dv-3": "33.333333%",
        "1-dv-4": "25%",
        "1-dv-5": "20%",
        "1-dv-6": "16.666667%",
        "10-dv-12": "83.333333%",
        "11-dv-12": "91.666667%",
        "2-dv-12": "16.666667%",
        "2-dv-3": "66.666667%",
        "2-dv-4": "50%",
        "2-dv-5": "40%",
        "2-dv-6": "33.333333%",
        "3-dv-12": "25%",
        "3-dv-4": "75%",
        "3-dv-5": "60%",
        "3-dv-6": "50%",
        "4-dv-12": "33.333333%",
        "4-dv-5": "80%",
        "4-dv-6": "66.666667%",
        "5-dv-12": "41.666667%",
        "5-dv-6": "83.333333%",
        "6-dv-12": "50%",
        "7-dv-12": "58.333333%",
        "8-dv-12": "66.666667%",
        "9-dv-12": "75%",
      },
      "width": {
        "1-dv-12": "8.333333%",
        "1-dv-2": "50%",
        "1-dv-3": "33.333333%",
        "1-dv-4": "25%",
        "1-dv-5": "20%",
        "1-dv-6": "16.666667%",
        "10-dv-12": "83.333333%",
        "11-dv-12": "91.666667%",
        "2-dv-12": "16.666667%",
        "2-dv-3": "66.666667%",
        "2-dv-4": "50%",
        "2-dv-5": "40%",
        "2-dv-6": "33.333333%",
        "3-dv-12": "25%",
        "3-dv-4": "75%",
        "3-dv-5": "60%",
        "3-dv-6": "50%",
        "4-dv-12": "33.333333%",
        "4-dv-5": "80%",
        "4-dv-6": "66.666667%",
        "5-dv-12": "41.666667%",
        "5-dv-6": "83.333333%",
        "6-dv-12": "50%",
        "7-dv-12": "58.333333%",
        "8-dv-12": "66.666667%",
        "9-dv-12": "75%",
      },
    },
    "fontSize": {
      "2xl": [
        "48rpx",
        {
          "lineHeight": "64rpx",
        },
      ],
      "3xl": [
        "60rpx",
        {
          "lineHeight": "72rpx",
        },
      ],
      "4xl": [
        "72rpx",
        {
          "lineHeight": "80rpx",
        },
      ],
      "5xl": [
        "96rpx",
        {
          "lineHeight": "1",
        },
      ],
      "6xl": [
        "120rpx",
        {
          "lineHeight": "1",
        },
      ],
      "7xl": [
        "144rpx",
        {
          "lineHeight": "1",
        },
      ],
      "8xl": [
        "192rpx",
        {
          "lineHeight": "1",
        },
      ],
      "9xl": [
        "256rpx",
        {
          "lineHeight": "1",
        },
      ],
      "base": [
        "32rpx",
        {
          "lineHeight": "48rpx",
        },
      ],
      "lg": [
        "36rpx",
        {
          "lineHeight": "56rpx",
        },
      ],
      "sm": [
        "28rpx",
        {
          "lineHeight": "40rpx",
        },
      ],
      "xl": [
        "40rpx",
        {
          "lineHeight": "56rpx",
        },
      ],
      "xs": [
        "24rpx",
        {
          "lineHeight": "32rpx",
        },
      ],
    },
    "lineHeight": {
      "10": "80rpx",
      "3": "24rpx",
      "4": "32rpx",
      "5": "40rpx",
      "6": "48rpx",
      "7": "56rpx",
      "8": "64rpx",
      "9": "72rpx",
      "loose": "2",
      "none": "1",
      "normal": "1.5",
      "relaxed": "1.625",
      "snug": "1.375",
      "tight": "1.25",
    },
    "screens": [],
    "spacing": {
      "0": "0px",
      "0-5": "4rpx",
      "1": "8rpx",
      "1-5": "12rpx",
      "10": "80rpx",
      "11": "88rpx",
      "12": "96rpx",
      "14": "112rpx",
      "16": "128rpx",
      "2": "16rpx",
      "2-5": "20rpx",
      "20": "160rpx",
      "24": "192rpx",
      "28": "224rpx",
      "3": "24rpx",
      "3-5": "28rpx",
      "32": "256rpx",
      "36": "288rpx",
      "4": "32rpx",
      "40": "320rpx",
      "44": "352rpx",
      "48": "384rpx",
      "5": "40rpx",
      "52": "416rpx",
      "56": "448rpx",
      "6": "48rpx",
      "60": "480rpx",
      "64": "512rpx",
      "7": "56rpx",
      "72": "576rpx",
      "8": "64rpx",
      "80": "640rpx",
      "9": "72rpx",
      "96": "768rpx",
      "px": "1px",
    },
  },
}
`;

exports[`miniprogram-preset > spacing 1`] = `
{
  "0": "0px",
  "0-5": "4rpx",
  "1": "8rpx",
  "1-5": "12rpx",
  "10": "80rpx",
  "11": "88rpx",
  "12": "96rpx",
  "14": "112rpx",
  "16": "128rpx",
  "2": "16rpx",
  "2-5": "20rpx",
  "20": "160rpx",
  "24": "192rpx",
  "28": "224rpx",
  "3": "24rpx",
  "3-5": "28rpx",
  "32": "256rpx",
  "36": "288rpx",
  "4": "32rpx",
  "40": "320rpx",
  "44": "352rpx",
  "48": "384rpx",
  "5": "40rpx",
  "52": "416rpx",
  "56": "448rpx",
  "6": "48rpx",
  "60": "480rpx",
  "64": "512rpx",
  "7": "56rpx",
  "72": "576rpx",
  "8": "64rpx",
  "80": "640rpx",
  "9": "72rpx",
  "96": "768rpx",
  "px": "1px",
}
`;
